# SwaBERT

./: .gitignore  LICENSE.txt  README.md  SECURITY.md  pyproject.toml
.docker/: Dockerfile  supervisord.conf
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/docker-build/: action.yml
.github/actions/lint/: action.yml
.github/actions/test/: action.yml
.github/workflows/: build.yml  codeql-analysis.yml  docker.yml
swa_bert/: __about__.py
